# torch-uv-boilerplate

./: README.md  pyproject.toml
src/torch_uv_boilerplate/: __init__.py
